# Zinet

./: .gitignore  .travis.yml  CMakeLists.txt  GenerateCMakeFiles.py  LICENSE  PG.bat  PPG.bat  README.md  TODO.md  TODO.txt  build.py  build_clear.bat  build_windows.bat  compile.bat  conan_install.bat  conan_profile.txt  conanfile.py  first_time.bat  generate_project_files.bat  linux.sh  main.cpp  menu.py  recipe_root.py  run_all_tests.py  run_automatic_tests.py  windows.bat
Core/: CMakeLists.txt  recipe_core.py  target_recipe.py
Core/source/: ZtClock.cpp  ZtEntity.cpp  ZtEventDispatcher.cpp  ZtFile.cpp  ZtFileFinder.cpp  ZtIdentifier.cpp  ZtLevel.cpp  ZtLogger.cpp  ZtLoop.cpp  ZtObject.cpp  ZtPointer.cpp  ZtRenderer.cpp  ZtSprite.cpp  ZtTime.cpp  ZtUniqueIdentifier.cpp  ZtUniqueIdentifierMaker.cpp  ZtWorld.cpp
Core/source/OCS/: ZtComponent.cpp  ZtObject.cpp  ZtSystem.cpp
Core/source/Reflection/: ZtReflectedClass.cpp  ZtReflectedCollection.cpp  ZtReflectedMemberFunction.cpp  ZtReflectedMemberProperty.cpp  ZtReflectionRegistry.cpp
Core/test_unit/: main.cpp  recipe_core_test_unit.py
Core/test_unit/source/: ZtClockTests.cpp  ZtEventBroadcasterTests.cpp  ZtFileFinderTests.cpp  ZtFileTests.cpp  ZtIdentifierTests.cpp  ZtLoggerTests.cpp  ZtTimeTests.cpp  ZtUniqueIdentifierMakerTests.cpp
Core/tests/: CMakeLists.txt  main.cpp  target_recipe.py
Core/tests/include/: ZtClockTests.h  ZtEntityTests.h  ZtEventBroadcasterTests.h  ZtEventDispatcherTests.h  ZtFileFinderTests.h  ZtFileTests.h  ZtIdentifierTests.h  ZtLevelTests.h  ZtLoggerTests.h  ZtPointerTests.h  ZtRenderInfoTests.h  ZtRendererTests.h  ZtSpriteTests.h  ZtTimeTests.h  ZtUniqueIdentifierMakerTests.h  ZtUniqueIdentifierTests.h  ZtVertexTests.h  ZtWorldTests.h
Core/tests/source/: ZtClockTests.cpp
Core/tests_unit/source/: ZtFileFinderTests.cpp  ZtReflectionSystemTests.cpp
EntryPoint/: CMakeLists.txt  recipe_entry_point.py  target_recipe.py
EntryPoint/Shaders/: shader.frag  shader.vert
EntryPoint/include/: ZtEntryPoint.h  ZtVulkanHelloTriangle.h
EntryPoint/source/: ZtEntryPoint.cpp  ZtVulkanHelloTriangle.cpp  main.cpp
EntryPoint/test_files/: shader.vert
Frame/: CMakeLists.txt
Frame/src/: ZtDummy.cpp  ZtFrameException.cpp  ZtLoop.cpp  ZtNormalLoop.cpp  ZtWindow.cpp
Glad/: CMakeLists.txt  target_recipe.py
Glad/Debug/src/: glad.c
Glad/Release/src/: glad.c
GraphicLayer/: CMakeLists.txt  recipe_graphic_layer.py  target_recipe.py
GraphicLayer/source/: ZtElementBuffer.cpp  ZtEvent.cpp  ZtGLBuffer.cpp  ZtGLBufferCopy.cpp  ZtGLCamera.cpp  ZtGLCommandBuffer.cpp  ZtGLCommandPool.cpp  ZtGLContext.cpp  ZtGLDebugUtilsMessenger.cpp  ZtGLDepthBuffer.cpp  ZtGLDescriptorPool.cpp  ZtGLDescriptorSetLayout.cpp  ZtGLDescriptorSets.cpp  ZtGLDevice.cpp  ZtGLDeviceMemory.cpp  ZtGLDrawable2DBase.cpp  ZtGLDrawableObject.cpp  ZtGLEvent.cpp  ZtGLFence.cpp  ZtGLFlipbook.cpp  ZtGLFramebuffer.cpp  ZtGLGLFW.cpp  ZtGLGraphicsPipeline.cpp  ZtGLImage.cpp  ZtGLImageBuffer.cpp  ZtGLImageView.cpp  ZtGLIndexBuffer.cpp  ZtGLInstance.cpp  ZtGLKeyboard.cpp  ZtGLMouse.cpp  ZtGLMouseButtonEvent.cpp  ZtGLMouseScrollEvent.cpp  ZtGLPhysicalDevice.cpp  ZtGLPipeline.cpp  ZtGLPipelineLayout.cpp  ZtGLProgram.cpp  ZtGLQueue.cpp  ZtGLRenderPass.cpp  ZtGLRenderTarget.cpp  ZtGLRenderer.cpp  (+38 more)
GraphicLayer/source/Buffers/: ZtGLBuffer.cpp  ZtGLImageBuffer.cpp  ZtGLIndexBuffer.cpp  ZtGLStagingBuffer.cpp  ZtGLUniformBuffer.cpp  ZtGLVertexBuffer.cpp
GraphicLayer/source/Imgui/: ZtGLImgui.cpp
GraphicLayer/test_functional/: main.cpp  recipe_graphic_layer_test_functional.py
GraphicLayer/test_functional/source/: ZtGLRendererTests.cpp
GraphicLayer/test_functional/test_files/: shader.frag  shader.vert
GraphicLayer/test_unit/: main.cpp  recipe_graphic_layer_test_unit.py
GraphicLayer/test_unit/include/: ZtGLRendererBuilder.h
GraphicLayer/test_unit/source/: ZtGLCameraTests.cpp  ZtGLCommandBufferTests.cpp  ZtGLDepthBufferTests.cpp  ZtGLDescriptorPoolTests.cpp  ZtGLDescriptorSetsTests.cpp  ZtGLDrawInfoTests.cpp  ZtGLDrawableObjectTests.cpp  ZtGLFramebufferTests.cpp  ZtGLImageTests.cpp  ZtGLImageViewTests.cpp  ZtGLImguiTests.cpp  ZtGLInstanceTests.cpp  ZtGLPhysicalDeviceTests.cpp  ZtGLPipelineLayoutTests.cpp  ZtGLPipelineTests.cpp  ZtGLQueueTests.cpp  ZtGLRenderPassTests.cpp  ZtGLRenderTargetTests.cpp  ZtGLRendererBuilder.cpp  ZtGLRendererContextTests.cpp  ZtGLRendererPipelineTests.cpp  ZtGLRendererTests.cpp  ZtGLShaderModuleTests.cpp  ZtGLShaderTests.cpp  ZtGLSpriteTests.cpp  ZtGLTextureTests.cpp  ZtGLTileMapTests.cpp  ZtGLTransformTests.cpp  ZtGLVmaTests.cpp  ZtGLVulkanObjectTests.cpp  ZtGLWindowTests.cpp
GraphicLayer/tests/: CMakeLists.txt  main.cpp  target_recipe.py
GraphicLayer/tests/include/: ZtElementBufferTests.h  ZtEventTests.h  ZtGLBufferCopyTests.h  ZtGLBufferTests.h  ZtGLCommandBufferTests.h  ZtGLCommandPoolTests.h  ZtGLContextTests.h  ZtGLDebugUtilsMessengerTests.h  ZtGLDescriptorPoolTests.h  ZtGLDescriptorSetLayoutTests.h  ZtGLDescriptorSetsTests.h  ZtGLDeviceMemoryTests.h  ZtGLDeviceTests.h  ZtGLDrawInfoTests.h  ZtGLEventTests.h  ZtGLGLFWTests.h  (+60 more)
GraphicLayer/tests_manual/: recipe_graphic_layer_tests_functional.py
Main/: CMakeLists.txt
Main/src/: ZtClock.cpp  ZtComponent.cpp  ZtComponentBase.cpp  ZtEntity.cpp  ZtIdentificator.cpp  ZtLogger.cpp  ZtLoggerBase.cpp  ZtMainException.cpp  ZtResourceBase.cpp  ZtSystemBase.cpp  ZtTime.cpp  ZtUniqueIndexer.cpp
Reflection/: CMakeLists.txt
Reflection/src/: ZtReflectionException.cpp  ZtReflectionRegister.cpp
Renderer/: CMakeLists.txt  target_recipe.py
Renderer/source/: Program.cpp  ZtElementBuffer.cpp  ZtProgram.cpp  ZtRender.cpp  ZtShader.cpp  ZtTexture.cpp  ZtVertex.cpp  ZtVertexArray.cpp  ZtVertexBuffer.cpp  ZtWindow.cpp
Renderer/tests/: CMakeLists.txt  main.cpp  target_recipe.py
System/: CMakeLists.txt
System/src/: ZtSystemInterface.cpp
tests/Frame-tests/: CMakeLists.txt  main.cpp
tests/Main-tests/: CMakeLists.txt  ZtLogger-tests.h  ZtMainException-tests.h  ZtMainLogger-tests.h  main.cpp
tests/Reflection-tests/: CMakeLists.txt  main.cpp
tests/System-tests/: CMakeLists.txt
(+1002 files in other folders)
